src/main/metadata/objects/Campaign_Survey_Result__c.object
<CustomObject>
    <description>Object to store Campaign Questionnaires result.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Survey Results</relationshipLabel>
        <relationshipName>Campaign_Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAC_SourceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CAC SourceId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Survey Results</relationshipLabel>
        <relationshipName>Campaign_Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q10_Answer_Code__c</fullName>
        <label>Q10 Answer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q10_Answer__c</fullName>
        <label>Q10 Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q10_Comment__c</fullName>
        <label>Q10 Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q10_Question_Code__c</fullName>
        <label>Q10 Question Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q10_Question__c</fullName>
        <label>Q10 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q11_Answer_Code__c</fullName>
        <label>Q11 Answer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q11_Answer__c</fullName>
        <label>Q11 Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q11_Comment__c</fullName>
        <label>Q11 Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q11_Question_Code__c</fullName>
        <label>Q11 Question Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q11_Question__c</fullName>
        <label>Q11 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q12_Answer_Code__c</fullName>
        <label>Q12 Answer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q12_Answer__c</fullName>
        <label>Q12 Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q12_Comment__c</fullName>
        <label>Q12 Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q12_Question_Code__c</fullName>
        <label>Q12 Question Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q12_Question__c</fullName>
        <label>Q12 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q3_A_Comment__c</fullName>
        <description>Used in flow - Customer Experience After-Event Survey</description>
        <label>Q3_A_Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q3_B_Comment__c</fullName>
        <description>Used in flow - Customer Experience After-Event Survey</description>
        <label>Q3_B_Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Step__c</fullName>
        <label>Survey Step</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskId__c</fullName>
        <label>TaskId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Campaign Survey Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Campaign Survey Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Survey Results</pluralLabel>
    <recordTypes>
        <fullName>Activity_Questionnaire</fullName>
        <active>true</active>
        <description>活动回访问卷1</description>
        <label>Activity Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>B_Class</fullName>
        <active>true</active>
        <label>B-Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>B_Class_Clare</fullName>
        <active>true</active>
        <label>B Class-Clare</label>
    </recordTypes>
    <recordTypes>
        <fullName>B_Class_Customer_Profile_Q_re_Chinese</fullName>
        <active>true</active>
        <description>B-Class Customer Profile Q&apos;re (Chinese)</description>
        <label>B-Class Customer Profile Q&apos;re (Chinese)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Car_Smell_Question_Survey</fullName>
        <active>true</active>
        <description>车内异味问题的调查回访1</description>
        <label>Car Smell Question Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Car_Smell_Question_Survey_Inactive</fullName>
        <active>true</active>
        <label>Car Smell Question Survey(Inactive)</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustomerCare_Satisfaction</fullName>
        <active>true</active>
        <description>车主关怀满意度回访问卷</description>
        <label>CustomerCare Satisfaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Experience_After_Event_Survey</fullName>
        <active>true</active>
        <description>Customer Experience After-Event Survey--</description>
        <label>Customer Experience After-Event Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Loyalty_Questionnaire</fullName>
        <active>true</active>
        <label>Customer Loyalty Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_Class_Experience_Journey</fullName>
        <active>true</active>
        <description>E级智趣之旅调查问卷</description>
        <label>E-Class Experience Journey</label>
    </recordTypes>
    <recordTypes>
        <fullName>G_Model_European_Tour_2012_G500_G55_AMG</fullName>
        <active>true</active>
        <description>G级车型欧洲体验之旅2012-G500、G55 AMG 电话问卷</description>
        <label>G Model European Tour 2012-G500\G55 AMG</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_Depth</fullName>
        <active>true</active>
        <label>In-Depth</label>
    </recordTypes>
    <recordTypes>
        <fullName>Limo_Service_Customer_Satisfaction_Survey_Questionnaire</fullName>
        <active>true</active>
        <description>Limo Service Customer Satisfaction Survey Questionnaire--</description>
        <label>Limo Service Customer Satisfaction Survey Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Magazine_Deliverability_Check</fullName>
        <active>true</active>
        <description>杂志接收情况调查问卷</description>
        <label>Magazine Deliverability Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Magazine_OB_Check_Script</fullName>
        <active>true</active>
        <description>Magazine OB check script</description>
        <label>Magazine OB Check Script</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mercedes_Benz_Sales_Satisfaction_Training_Guide</fullName>
        <active>true</active>
        <label>Mercedes Benz Sales Satisfaction Training Guide</label>
    </recordTypes>
    <recordTypes>
        <fullName>OB_Calls_to_Complaint_Customer_FM93</fullName>
        <active>true</active>
        <description>OB Calls to Complaint Customer_FM93</description>
        <label>OB Calls to Complaint Customer_FM93</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ongoing_leads_Follow_up_Call</fullName>
        <active>true</active>
        <label>Ongoing leads Follow up Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>RME_Campaign_1st_Round</fullName>
        <active>true</active>
        <description>RME Campaign 1st round</description>
        <label>RME Campaign 1st Round</label>
    </recordTypes>
    <recordTypes>
        <fullName>R_Establish_Dealer_Contact_Conversion_Check_2</fullName>
        <active>true</active>
        <description>R_Establishdealercontact_conversioncheck_2</description>
        <label>R Establish Dealer Contact Conversion Check 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>R_Establishdealercontact_conversioncheck_1</fullName>
        <active>true</active>
        <label>R_Establishdealercontact_conversioncheck_1</label>
    </recordTypes>
    <recordTypes>
        <fullName>R_Magazine_OB</fullName>
        <active>true</active>
        <description>R_Magazine_OB</description>
        <label>R Magazine OB</label>
    </recordTypes>
    <recordTypes>
        <fullName>R_Product_1st_Round</fullName>
        <active>true</active>
        <description>R product 1st round</description>
        <label>R Product 1st Round</label>
    </recordTypes>
    <recordTypes>
        <fullName>R_Product_1st_Round_2</fullName>
        <active>true</active>
        <description>R product 1st round (2)</description>
        <label>R Product 1st Round 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>R_Product_2nd_Round</fullName>
        <active>true</active>
        <description>R Product 2nd Round</description>
        <label>R Product 2nd Round</label>
    </recordTypes>
    <recordTypes>
        <fullName>R_smart_2nd_round_PI_check</fullName>
        <active>true</active>
        <label>R_smart 2nd round PI check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regular</fullName>
        <active>true</active>
        <label>Regular</label>
    </recordTypes>
    <recordTypes>
        <fullName>SUV_Family_Satisfaction</fullName>
        <active>true</active>
        <description>SUV Family Satisfaction</description>
        <label>SUV Family Satisfaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>S_Class</fullName>
        <active>true</active>
        <description>S-Class调研访谈活动</description>
        <label>S-Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>Satisfaction_Questionnaire</fullName>
        <active>true</active>
        <description>满意度回访问卷</description>
        <label>Satisfaction Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shanghai_F1_Satisfaction_Survey_Questionnaire_Every_One_Year</fullName>
        <active>true</active>
        <description>Shanghai F1 Satisfaction Survey Questionnaire--Every One year</description>
        <label>Shanghai F1 Satisfaction Survey Questionnaire--Every One Year</label>
    </recordTypes>
    <recordTypes>
        <fullName>Smart_1st_Round_PI_Check</fullName>
        <active>true</active>
        <description>Smart 1st Round PI Check</description>
        <label>Smart 1st Round PI Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Smart_1st_Round_PI_Check_2</fullName>
        <active>true</active>
        <description>smart 1st round PI check (2)</description>
        <label>Smart 1st Round PI Check 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>X1st_Round_PI_Check</fullName>
        <active>true</active>
        <description>2014.9.16 1st Round PI Check survey</description>
        <label>1st Round PI Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2014_2nd_MB_Magazine_Survey</fullName>
        <active>true</active>
        <description>2014第二季度《梅赛德斯-奔驰杂志》客户调查问卷</description>
        <label>2014 2nd MB Magazine Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2014_3nd_MB_Magazine_Survey</fullName>
        <active>true</active>
        <description>2014第三季度《梅赛德斯-奔驰杂志》客户调查问卷</description>
        <label>2014 3nd MB Magazine Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2014_GLA_SUV_Survey</fullName>
        <active>true</active>
        <label>2014 GLA SUV Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2014_MB_Quality</fullName>
        <active>true</active>
        <label>2014 MB Quality</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2nd_Survey</fullName>
        <active>true</active>
        <label>2nd Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>on_going_leads_follow_up_1st_call</fullName>
        <active>true</active>
        <label>on-going leads follow up 1st call</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>